force-app/main/default/objects/CONMAN_Contract__c/fields/Pricing_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Approval_Status__c</fullName>
    <description>Shows if Pricing Approval has been Requested, Approved, or Rejected</description>
    <label>Pricing Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>