force-app/main/default/objects/CONMAN_Contract__c/fields/Product_Details_Were_Manually_Changed__c.field-meta.xml
<CustomField>
    <fullName>Product_Details_Were_Manually_Changed__c</fullName>
    <label>Product Details Were Manually Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>