force-app/main/default/objects/CONMAN_Contract__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>License (When License fill up additional fields)</fullName>
            </value>
            <value>
                <fullName>Audio (Less Data Entry)</fullName>
            </value>
            <value>
                <fullName>License + Audio (When License Fill up additional field)</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>3rd Party Products</fullName>
            </value>
            <value>
                <fullName>GlobalMeet Audio</fullName>
            </value>
            <value>
                <fullName>GlobalMeet</fullName>
            </value>
            <value>
                <fullName>iMeet</fullName>
            </value>
            <value>
                <fullName>Operator Assisted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>