force-app/main/default/objects/CONMAN_Contract__c/fields/Promotional_Trial_Offer_Period__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Trial_Offer_Period__c</fullName>
    <label>Promotional Trial Offer Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>