force-app/main/default/objects/CONMAN_Contract__c/fields/Provisioned__c.field-meta.xml
<CustomField>
    <fullName>Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisioned</label>
    <type>Checkbox</type>
</CustomField>