force-app/main/default/objects/CONMAN_Contract__c/fields/Provisioned_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Licenses__c</fullName>
    <description>Original + Add-On (Co-terminus Contract)</description>
    <inlineHelpText>Original + Add-On (Co-terminus Contract)</inlineHelpText>
    <label>Provisioned Licenses</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>