force-app/main/default/objects/CONMAN_Contract__c/fields/Quote_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Quote_Additional_Notes__c</fullName>
    <description>Additional notes about the Quote from Contract submitter.</description>
    <inlineHelpText>Additional notes about the Quote from Contract submitter.</inlineHelpText>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>