force-app/main/default/objects/CONMAN_Contract__c/fields/Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement</label>
    <referenceTo>echosign_dev1__SIGN_Agreement__c</referenceTo>
    <relationshipLabel>PGi Contracts</relationshipLabel>
    <relationshipName>PGi_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>