force-app/main/default/objects/CONMAN_Contract__c/fields/Related_Ultimate_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Ultimate_Parent_Account__c</fullName>
    <formula>Account_Name__r.Ultimate_Parent_Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Ultimate Parent Account</label>
    <type>Text</type>
</CustomField>