force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_ARG__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_ARG__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this Contract/Amendment requires Pricing Approval from ARG Team.</description>
    <inlineHelpText>Whether or not this Contract/Amendment requires Pricing Approval from ARG Team.</inlineHelpText>
    <label>Required Approval: ARG</label>
    <type>Checkbox</type>
</CustomField>