force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_Billing__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Approval: Billing</label>
    <type>Checkbox</type>
</CustomField>