force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_Deal_Desk__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Deal_Desk__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this Contract/Amendment requires Pricing Approval from the Deal Desk.</description>
    <inlineHelpText>Whether or not this Contract/Amendment requires Pricing Approval from the Deal Desk.</inlineHelpText>
    <label>Required Approval: Deal Desk</label>
    <type>Checkbox</type>
</CustomField>