force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_Legal__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this Contract/Amendment requires Legal Approval.</description>
    <inlineHelpText>Whether or not this Contract/Amendment requires Legal Approval.</inlineHelpText>
    <label>Required Approval: Legal</label>
    <type>Checkbox</type>
</CustomField>