force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_Pricing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Pricing_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this Contract/Amendment requires Pricing Approval from the owner&#39;s manager.</description>
    <inlineHelpText>Whether or not this Contract/Amendment requires Pricing Approval from the owner&#39;s manager.</inlineHelpText>
    <label>Required Approval: Pricing - Manager</label>
    <type>Checkbox</type>
</CustomField>