force-app/main/default/objects/CONMAN_Contract__c/fields/Required_Approval_Pricing_SVP__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Pricing_SVP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this Contract/Amendment requires Pricing Approval from the owner&apos;s SVP.</description>
    <inlineHelpText>Whether or not this Contract/Amendment requires Pricing Approval from the owner&apos;s SVP.</inlineHelpText>
    <label>Required Approval: Pricing - SVP</label>
    <type>Checkbox</type>
</CustomField>