force-app/main/default/objects/CONMAN_Contract__c/fields/Sales_Ops_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Ops_Status__c</fullName>
    <description>Tracks the &quot;work&quot; of the Sales Ops team and is independent of Contract Status - Replacement of the QC field called QC Status</description>
    <label>Sales Ops Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Contract Document Generated</fullName>
            </value>
            <value>
                <fullName>Contract Signed by Customer</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Presented</fullName>
            </value>
            <value>
                <fullName>Pricing Approved - Internally Signed</fullName>
            </value>
            <value>
                <fullName>Quote- In Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Contract</fullName>
            </value>
            <value>
                <fullName>Submitted - Price Approval</fullName>
            </value>
            <value>
                <fullName>Submitted Contract- Customer Approval</fullName>
            </value>
            <value>
                <fullName>Submitted Contract-Internal Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>