force-app/main/default/objects/CONMAN_Contract__c/fields/SearchName__c.field-meta.xml
<CustomField>
    <fullName>SearchName__c</fullName>
    <formula>Name + &quot; &quot; + &quot;-&quot; + &quot; &quot; + Company_s_Name__c+ &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT(Contract_Type__c)+ &quot; &quot; + &quot;-&quot; + &quot; &quot; +  TEXT(Service_Commencement_Date__c)</formula>
    <label>Search Name</label>
    <type>Text</type>
</CustomField>