force-app/main/default/objects/CONMAN_Contract__c/fields/Service_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Commencement_Date__c</fullName>
    <description>Date the Agreement will take effect, or empty if the signature date</description>
    <label>Service Commencement Date</label>
    <type>Date</type>
</CustomField>