force-app/main/default/objects/CONMAN_Contract__c/fields/Service_Level_Schedule_Selection__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_Schedule_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if sales rep checks SLS on legal request form.</description>
    <label>Service Level Schedule</label>
    <type>Checkbox</type>
</CustomField>