force-app/main/default/objects/CONMAN_Contract__c/fields/Submitters_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Submitters_Additional_Comments__c</fullName>
    <description>Comments from the Contract Submitter to the Legal Team.</description>
    <inlineHelpText>Comments from the Contract Submitter to the Legal Team.</inlineHelpText>
    <label>Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>