force-app/main/default/objects/CONMAN_Contract__c/fields/Submitters_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>Submitters_Cell_Phone__c</fullName>
    <description>Submitter&#39;s Cell Phone</description>
    <formula>Owner:User.MobilePhone</formula>
    <inlineHelpText>Submitter&#39;s Cell Phone</inlineHelpText>
    <label>Cell Phone</label>
    <type>Text</type>
</CustomField>