force-app/main/default/objects/CONMAN_Contract__c/fields/Submitters_Email__c.field-meta.xml
<CustomField>
    <fullName>Submitters_Email__c</fullName>
    <description>Submitter&#39;s Email</description>
    <formula>Owner:User.Email</formula>
    <inlineHelpText>Submitter&#39;s Email</inlineHelpText>
    <label>Email</label>
    <type>Text</type>
</CustomField>