force-app/main/default/objects/CONMAN_Contract__c/fields/Supersede_Existing_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Supersede_Existing_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if the new contract should supersede existing agreements</description>
    <label>Supersede Existing Agreements</label>
    <type>Checkbox</type>
</CustomField>