force-app/main/default/objects/CONMAN_Contract__c/fields/T_Cs_Were_Manually_Changed__c.field-meta.xml
<CustomField>
    <fullName>T_Cs_Were_Manually_Changed__c</fullName>
    <label>T&amp;Cs Were Manually Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>