force-app/main/default/objects/CONMAN_Contract__c/fields/Terms_and_Conditions_Updates__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if terms and conditions checkbox is checked from SFDC. Hidden on PGi Contract object.</description>
    <label>Terms and Conditions Updates</label>
    <type>Checkbox</type>
</CustomField>