force-app/main/default/objects/CONMAN_Contract__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <defaultValue>&quot;PGi Quote&quot;</defaultValue>
    <description>The title that appears at the top of the Contract Document</description>
    <inlineHelpText>The title that appears at the top of the Contract Document</inlineHelpText>
    <label>Contract Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>