force-app/main/default/objects/CONMAN_Contract__c/fields/Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>Total_ACV__c</fullName>
    <description>Annual Contract Value</description>
    <inlineHelpText>Annual Contract Value</inlineHelpText>
    <label>Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>