force-app/main/default/objects/CONMAN_Contract__c/fields/URL_Link__c.field-meta.xml
<CustomField>
    <fullName>URL_Link__c</fullName>
    <formula>&quot;https://na68.salesforce.com/&quot; &amp;  PGiContracts18ID__c</formula>
    <label>URL Link</label>
    <type>Text</type>
</CustomField>