force-app/main/default/objects/CONMAN_Contract__c/fields/Validity_Date__c.field-meta.xml
<CustomField>
    <fullName>Validity_Date__c</fullName>
    <description>This field is set in iContract when the user uses the &quot;Save and Preview&quot; button on the products page</description>
    <label>Validity Date</label>
    <type>Date</type>
</CustomField>