force-app/main/default/objects/CONMAN_Contract__c/fields/WebEx_Selection__c.field-meta.xml
<CustomField>
    <fullName>WebEx_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if sales rep checks WebEx on legal request form.</description>
    <label>WebEx (Email Order Add-On Language)</label>
    <type>Checkbox</type>
</CustomField>