force-app/main/default/objects/CONMAN_Contract__c/fields/Word_File_In_Use__c.field-meta.xml
<CustomField>
    <fullName>Word_File_In_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Word file has been downloaded and is in use, Salesforce&apos;s version of the PDF is inaccurate and should not be available for download.</description>
    <inlineHelpText>If a Word file has been downloaded and is in use, Salesforce&apos;s version of the PDF is inaccurate and should not be available for download.</inlineHelpText>
    <label>Word File In Use</label>
    <type>Checkbox</type>
</CustomField>