force-app/main/default/objects/CONMAN_Contract__c/fields/xDeactivated_Agreement_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>xDeactivated_Agreement_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>xDeactivated Agreement Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PGi_Contracts2</relationshipName>
    <type>Lookup</type>
</CustomField>