force-app/main/default/objects/CONMAN_Contract__c/fields/z_unittype__c.field-meta.xml
<CustomField>
    <fullName>z_unittype__c</fullName>
    <description>used to identify the email template in workflow Email Contract created in SFDC</description>
    <label>z-unittype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Device(s)</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Licenses</fullName>
            </value>
            <value>
                <fullName>Minutes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>