force-app/main/default/objects/CONMAN_Contract__c/recordTypes/EMEA_Contract.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Contract</fullName>
    <active>true</active>
    <description>EMEA Contract going through the iContract system</description>
    <label>EMEA Contract</label>
</RecordType>