force-app/main/default/objects/CONMAN_Contract__c/recordTypes/iContract.recordType-meta.xml
<RecordType>
    <fullName>iContract</fullName>
    <active>true</active>
    <description>NA Contract going through the iContract system</description>
    <label>NA Contract</label>
</RecordType>