force-app/main/default/objects/CONMAN_Contract__c/recordTypes/International_Contract.recordType-meta.xml
<RecordType>
    <fullName>International_Contract</fullName>
    <active>true</active>
    <description>APAC Contract going through the iContract system</description>
    <label>APAC Contract</label>
</RecordType>