force-app/main/default/objects/CONMAN_Contract__c/validationRules/PGi_Contract_Limit_Intl_Users_to_Intl.validationRule-meta.xml
<ValidationRule>
    <fullName>PGi_Contract_Limit_Intl_Users_to_Intl</fullName>
    <active>true</active>
    <description>Intl Users can only use Intl record type</description>
    <errorConditionFormula>AND(
RecordType.Id = &apos;01213000001WHZh&apos;,
 $User.ProfileId &lt;&gt; &apos;00e30000001kms9&apos;,
 $User.ProfileId &lt;&gt; &apos;00e13000001x8nV&apos;,
 $User.ProfileId &lt;&gt; &apos;00ea0000001sdEo&apos;,
 $User.ProfileId &lt;&gt; &apos;00e1B000002KhVK&apos;,
OR(
ISPICKVAL($User.User_Region__c, &quot;APAC&quot;),
ISPICKVAL($User.User_Region__c, &quot;EMEA&quot;)
))</errorConditionFormula>
    <errorMessage>Users in EMEA or APAC must use the International Contract record type.</errorMessage>
</ValidationRule>