force-app/main/default/objects/CONMAN_Contract__c/listViews/all1.listView-meta.xml
<ListView>
    <fullName>all1</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
</ListView>