force-app/main/default/objects/CONMAN_Contract__c/listViews/Amendments_This_Month.listView-meta.xml
<ListView>
    <fullName>Amendments_This_Month</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>OwnersFullName__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Amendment</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Admin: Amendments This Month</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>