force-app/main/default/objects/CONMAN_Contract__c/listViews/APAC_PGi_Contracts.listView-meta.xml
<ListView>
    <fullName>APAC_PGi_Contracts</fullName>
    <columns>CREATED_DATE</columns>
    <columns>OwnersFullName__c</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Billing_Ticket_Number__c</columns>
    <columns>Date_Billing_Notified__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Contracted_Licenses__c</columns>
    <columns>Contracted_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CONMAN_Contract__c.International_Contract</value>
    </filters>
    <filters>
        <field>Contract_Region__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>APAC: Created This Month</label>
    <language>en_US</language>
</ListView>