force-app/main/default/objects/CONMAN_Contract__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>OwnersFullName__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Account_s_Agreement_Name__c</columns>
    <columns>Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Admin: Created This Week</label>
    <language>en_US</language>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>