force-app/main/default/objects/CONMAN_Contract__c/listViews/My_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>PGiCompany__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Related_Agreement__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_Renewal_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>*My PGi Contracts</label>
    <language>en_US</language>
</ListView>