force-app/main/default/objects/CONMAN_Contract__c/listViews/NA_Created_This_Month.listView-meta.xml
<ListView>
    <fullName>NA_Created_This_Month</fullName>
    <columns>NAME</columns>
    <columns>OwnersFullName__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Opportunity__c</columns>
    <columns>PGiCompany__c</columns>
    <columns>Contract_Status__c</columns>
    <columns>Contract_Type__c</columns>
    <columns>Related_Agreement__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_Renewal_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CONMAN_Contract__c.iContract</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>NA: Created This Month</label>
    <language>en_US</language>
</ListView>