force-app/main/default/objects/CONMAN_Contract__c/listViews/PGi_Contract_APAC_Deal_Desk_CONMAN_Contract.listView-meta.xml
<ListView>
    <fullName>PGi_Contract_APAC_Deal_Desk_CONMAN_Contract</fullName>
    <filterScope>Queue</filterScope>
    <label>PGi-Contract-APAC-Deal Desk</label>
    <queue>PGi_Contract_APAC_Deal_Desk</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>